--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-map-gl": "^7.0.23",
+    "react-map-gl-geocoder": "^2.2.0",
     "react-router-dom": "^6.11.2",
     "react-typed": "^1.2.0"
   },
