--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-map-gl": "^7.0.25",
-    "react-router-dom": "^6.11.2",
-    "react-typed": "^1.2.0"
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
