--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "actioncable": "^5.2.8-1",
     "axios": "^1.4.0",
     "mapbox-gl": "^2.14.1",
     "react": "^18.2.0",
